usage: export filtered usage queries
