# internal/metering/adapters/http/usage/routes.go
@@ -6,8 +6,10 @@ func (h *Handler) RegisterRoutes(router chi.Router) {
 	router.Post("/usages", h.Create)
 	router.Post("/usages/bulk", h.CreateBulk)
 	router.Post("/usages/breakdowns/search", h.SearchBreakdown)
+	router.Post("/usages/export", h.ExportSearch)
 	router.Post("/usages/search", h.Search)
 	router.Post("/usageevents/prune", h.PruneEvents)
+	router.Post("/usageevents/export", h.ExportEventsSearch)
 	router.Post("/usageevents/search", h.SearchEvents)
 	router.Get("/usages/dimensions", h.ListDimensionValues)
 	router.Get("/usages", h.List)
